--- a/garmin/pom.xml
+++ b/garmin/pom.xml
@@ -12,15 +12,14 @@
 	</parent>
 
 	<groupId>com.alvaro</groupId>
-	<artifactId>garmin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>garmin</name>
+	<artifactId>enduremetrics</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>EndureMetrics</name>
+	<description>Plataforma avanzada de análisis y monitorización de métricas de rendimiento deportivo.</description>
 
 	<properties>
 		<java.version>17</java.version>
 		<javafx.version>21.0.2</javafx.version>
-		<jenetics.version>3.0.1</jenetics.version>
-		<tilesfx.version>17.1.17</tilesfx.version>
 		<atlantafx.version>2.0.1</atlantafx.version>
 	</properties>
 
@@ -133,7 +132,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<mainClass>com.alvaro.garmin.GarminApplication</mainClass>
+					<mainClass>com.alvaro.enduremetrics.EndureMetricsApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
