--- a/enduremetrics/.gitignore
+++ b/enduremetrics/.gitignore
@@ -29,5 +29,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# Entornos de Desarrollo (IDEs)
+.idea/
 .vscode/
+*.iml
+*.iws
